<resources>
    <string-array name="kytn">
        <item>אַשְׁרֵי תְמִימֵי דָרֶךְ הַהֹלְכִים בְּתוֹרַת אֲדֹנָי. אַשְׁרֵי נֹצְרֵי עֵדֹתָיו בְּכָל לֵב יִדְרְשׁוּהוּ. אַף לֹא פָעֲלוּ עַוְלָה בִּדְרָכָיו הָלָכוּ. אַתָּה צִוִּיתָה פִקֻּדֶיךָ לִשְׁמֹר מְאֹד. אַחֲלַי יִכֹּנוּ דְרָכָי לִשְׁמֹר חֻקֶּיךָ. אז לֹא אֵבוֹשׁ בְּהַבִּיטִי אֶל כָּל מִצְוֹתֶיךָ. אוֹדְךָ בְּיֹשֶׁר לֵבָב בְּלָמְדִי מִשְׁפְּטֵי צִדְקֶךָ. אֶת חֻקֶּיךָ אֶשְׁמֹר אַל תַּעַזְבֵנִי עַד מְאֹד.</item>
        <item>בַּמֶּה יְזַכֶּה נַּעַר אֶת אָרְחוֹ לִשְׁמֹר כִּדְבָרֶךָ. כָל לִבִּי דְרַשְׁתִּיךָ אַל תַּשְׁגֵּנִי מִמִּצְוֹתֶיךָ. בְּלִבִּי צָפַנְתִּי אִמְרָתֶךָ לְמַעַן לֹא אֶחֱטָא לָךְ. בָּרוּךְ אַתָּה אֲדֹנָי לַמְּדֵנִי חֻקֶּיךָ. בִּשְׂפָתַי סִפַּרְתִּי כֹּל מִשְׁפְּטֵי פִיךָ. בְּדֶרֶךְ עֵדְוֹתֶיךָ שַׂשְׂתִּי כְּעַל כָּל הוֹן. בְּפִקּוּדֶיךָ אָשִׂיחָה וְאַבִּיטָה אֹרְחֹתֶיךָ. בְּחֻקֹּתֶיךָ אֶשְׁתַּעֲשָׁע לֹא אֶשְׁכַּח דְּבָרֶךָ.</item>
        <item>גְּמֹל עַל עַבְדְּךָ אֶחְיֶה וְאֶשְׁמְרָה דְבָרֶךָ. גַּל עֵינַי וְאַבִּיטָה נִפְלָאוֹת מִתּוֹרָתֶךָ. גֵּר אָנֹכִי בָאָרֶץ אַל תַּסְתֵּר מִמֶּנִּי מִצְוֹתֶיךָ. גָּרְסָה נַפְשִׁי לְתַאֲבָה אֶל מִשְׁפָּטֶיךָ בְכָל עֵת. גָּעַרְתָּ זֵדִים אֲרוּרִים הַשֹּׁגִים מִמִּצְוֹתֶיךָ. גַּל מֵעָלַי חֶרְפָּה וָבוּז. כִּי עֵדֹתֶיךָ נָצָרְתִּי. גַּם יָשְׁבוּ שָׂרִים בִּי נִדְבָּרוּ עַבְדְּךָ יָשִׂיחַ בְּחֻקֶּיךָ. גַּם עֵדֹתֶיךָ שַׁעֲשֻׁעָי אַנְשֵׁי עֲצָתִי.</item>
        <item>דָּבְקָה לֶעָפָר נַפְשִׁי חַיֵּנִי כִּדְבָרֶךָ. דְּרָכַי סִפַּרְתִּי וַתַּעֲנֵנִי לַמְּדֵנִי חֻקֶּיךָ. דֶּרֶךְ פִּקּוּדֶיךָ הֲבִינֵנִי וְאָשִׂיחָה בְּנִפְלְאוֹתֶיךָ. דָּלְפָה נַפְשִׁי מִתּוּגָה קַיְּמֵנִי כִּדְבָרֶךָ. דֶּרֶךְ שֶׁקֶר הָסֵר מִמֶּנִּי וְתוֹרָתְךָ חָנֵּנִי. דֶּרֶךְ אֱמוּנָה בָחָרְתִּי מִשְׁפָּטֶיךָ שִׁוִּיתִי. דָּבַקְתִּי בְעֵדְוֹתֶיךָ אֲדֹנָי אַל תְּבִישֵׁנִי. דֶּרֶךְ מִצְוֹתֶיךָ אָרוּץ. כִּי תַרְחִיב לִבִּי.</item>
        <item>הוֹרֵנִי אֲדֹנָי דֶּרֶךְ חֻקֶּיךָ וְאֶצְּרֶנָּה עֵקֶב. הֲבִינֵנִי וְאֶצְּרָה תוֹרָתֶךָ וְאֶשְׁמְרֶנָּה בְכָל לֵב. הַדְרִיכֵנִי בִּנְתִיב מִצְוֹתֶיךָ. כִּי בוֹ חָפָצְתִּי. הַט לִבִּי אֶל עֵדְוֹתֶיךָ וְאַל אֶל בָּצַע. הַעֲבֵר עֵינַי מֵרְאוֹת שָׁוְא בִּדְרָכֶךָ חַיֵּנִי. הָקֵם לְעַבְדְּךָ אִמְרָתֶךָ אֲשֶׁר לְיִרְאָתֶךָ. הַעֲבֵר חֶרְפָּתִי אֲשֶׁר יָגֹרְתִּי. כִּי מִשְׁפָּטֶיךָ טוֹבִים. הִנֵּה תָּאַבְתִּי לְפִקֻּדֶיךָ בְּצִדְקָתְךָ חַיֵּנִי.</item>
        <item>וִיבֹאֻנִי חֲסָדֶךָ אֲדֹנָי תְּשׁוּעָתְךָ כְּאִמְרָתֶךָ. וְאֶעֱנֶה חֹרְפִי דָבָר. כִּי בָטַחְתִּי בִּדְבָרֶךָ. וְאַל תַּצֵּל מִפִּי דְבַר אֱמֶת עַד מְאֹד. כִּי לְמִשְׁפָּטֶךָ יִחָלְתִּי. וְאֶשְׁמְרָה תוֹרָתְךָ תָמִיד לְעוֹלָם וָעֶד. וְאֶתְהַלְּכָה בָרְחָבָה. כִּי פִקֻּדֶיךָ דָרָשְׁתִּי. וַאֲדַבְּרָה בְעֵדֹתֶיךָ נֶגֶד מְלָכִים וְלֹא אֵבוֹשׁ. וְאֶשְׁתַּעֲשַׁע בְּמִצְוֹתֶיךָ אֲשֶׁר אָהָבְתִּי. וְאֶשָּׂא כַפַּי אֶל מִצְוֹתֶיךָ אֲשֶׁר אָהָבְתִּי וְאָשִׂיחָה בְחֻקֶּיךָ.</item>
        <item>זְכֹר דָּבָר לְעַבְדֶּךָ עַל אֲשֶׁר יִחַלְתָּנִי. זֹאת נֶחָמָתִי בְעָנְיִי. כִּי אִמְרָתְךָ חִיָּתְנִי. זֵדִים הֱלִיצֻנִי עַד מְאֹד מִתּוֹרָתְךָ לֹא נָטִיתִי. זָכַרְתִּי מִשְׁפָּטֶיךָ מֵעוֹלָם אֲדֹנָי וָאֶתְנֶחָם. זַלְעָפָה אֲחָזַתְנִי מֵרְשָׁעִים עֹזְבֵי תּוֹרָתֶךָ. זְמִרוֹת הָיוּ לִי חֻקֶּיךָ בְּבֵית מְגוּרָי. זָכַרְתִּי בַלַּיְלָה שִׁמְךָ אֲדֹנָי וָאֶשְׁמְרָה תּוֹרָתֶךָ. זֹאת הָיְתָה לִּי. כִּי פִקֻּדֶיךָ נָצָרְתִּי.</item>
        <item>חֶלְקִי אֲדֹנָי אָמַרְתִּי לִשְׁמֹר דְּבָרֶיךָ. חִלִּיתִי פָנֶיךָ בְכָל לֵב חָנֵּנִי כְּאִמְרָתֶךָ. חִשַּׁבְתִּי דְרָכָי וָאָשִׁיבָה רַגְלַי אֶל עֵדֹתֶיךָ. חַשְׁתִּי וְלֹא הִתְמַהְמָהְתִּי לִשְׁמֹר מִצְוֹתֶיךָ. חֶבְלֵי רְשָׁעִים עִוְּדֻנִי תּוֹרָתְךָ לֹא שָׁכָחְתִּי. חֲצוֹת לַיְלָה אָקוּם לְהוֹדוֹת לָךְ. עַל מִשְׁפְּטֵי צִדְקֶךָ. חָבֵר אָנִי לְכָל אֲשֶׁר יְרֵאוּךָ וּלְשֹׁמְרֵי פִּקּוּדֶיךָ. חַסְדְּךָ אֲדֹנָי מָלְאָה הָאָרֶץ חֻקֶּיךָ לַמְּדֵנִי.</item>
        <item>טוֹב עָשִׂיתָ עִם עַבְדְּךָ אֲדֹנָי כִּדְבָרֶךָ. טוּב טַעַם וָדַעַת לַמְּדֵנִי. כִּי בְמִצְוֹתֶיךָ הֶאֱמָנְתִּי. טֶרֶם אֶעֱנֶה אֲנִי שֹׁגֵג וְעַתָּה אִמְרָתְךָ שָׁמָרְתִּי. טוֹב אַתָּה וּמֵטִיב לַמְּדֵנִי חֻקֶּיךָ. טָפְלוּ עָלַי שֶׁקֶר זֵדִים אֲנִי בְּכָל לֵב אֶצֹּר פִּקּוּדֶיךָ. טָפַשׁ כַּחֵלֶב לִבָּם אֲנִי תּוֹרָתְךָ שִׁעֲשָׁעְתִּי. טוֹב לִי כִי עֻנֵּיתִי לְמַעַן אֶלְמַד חֻקֶּיךָ. טוֹב לִי תוֹרַת פִּיךָ מֵאַלְפֵי זָהָב וָכָסֶף. </item>
        <item>יָדֶיךָ עָשׂוּנִי וַיְכוֹנְנוּנִי הֲבִינֵנִי וְאֶלְמְדָה מִצְוֹתֶיךָ. יְרֵאֶיךָ יִרְאוּנִי וְיִשְׂמָחוּ. כִּי לִדְבָרְךָ יִחָלְתִּי. יָדַעְתִּי אֲדֹנָי כִּי צֶדֶק מִשְׁפָּטֶיךָ וֶאֱמוּנָה עִנִּיתָנִי. יְהִי נָא חַסְדְּךָ לְנַחֲמֵנִי כְּאִמְרָתְךָ לְעַבְדֶּךָ. יְבֹאוּנִי רַחֲמֶיךָ וְאֶחְיֶה. כִּי תוֹרָתְךָ שַׁעֲשֻׁעָי. יֵבֹשׁוּ זֵדִים כִּי שֶׁקֶר עִוְּתוּנִי אֲנִי אָשִׂיחַ בְּפִקּוּדֶיךָ. יָשׁוּבוּ לִי יְרֵאֶיךָ וְיֹדְעֵי עֵדֹתֶיךָ. יְהִי לִבִּי תָמִים בְּחֻקֶּיךָ לְמַעַן לֹא אֵבוֹשׁ.</item>
        <item>כָּלְתָה לִתְשׁוּעָתְךָ נַפְשִׁי לִדְבָרְךָ יִחָלְתִּי. כָּלוּ עֵינַי לְאִמְרָתֶךָ לֵאמֹר מָתַי תְּנַחֲמֵנִי. כִּי הָיִיתִי כְּנֹאד בְּקִיטוֹר חֻקֶּיךָ לֹא שָׁכָחְתִּי. כַּמָּה יְמֵי עַבְדֶּךָ מָתַי תַּעֲשֶׂה בְרֹדְפַי מִשְׁפָּט. כָּרוּ לִי זֵדִים שִׁיחוֹת אֲשֶׁר לֹא כְתוֹרָתֶךָ. כָּל מִצְוֹתֶיךָ אֱמוּנָה שֶׁקֶר רְדָפוּנִי עָזְרֵנִי. כִּמְעַט כִּלּוּנִי בָאָרֶץ וַאֲנִי לֹא עָזַבְתִּי פִקֻּדֶיךָ. כְּחַסְדְּךָ חַיֵּנִי וְאֶשְׁמְרָה עֵדוּת פִּיךָ.</item>
        <item>לְעוֹלָם אֲדֹנָי דְּבָרְךָ נִצָּב בַּשָּׁמָיִם. לְדֹר וָדֹר אֱמוּנָתֶךָ כּוֹנַנְתָּ אֶרֶץ וַתַּעֲמֹד. לְמִשְׁפָּטֶיךָ עָמְדוּ הַיּוֹם. כִּי הַכֹּל עֲבָדֶיךָ. לוּלֵי תוֹרָתְךָ שַׁעֲשֻׁעָי אָז אָבַדְתִּי בְעָנְיִי. לְעוֹלָם לֹא אֶשְׁכַּח פִּקּוּדֶיךָ. כִּי בָם חִיִּיתָנִי. לְךָ אֲנִי הוֹשִׁיעֵנִי. כִּי פִקּוּדֶיךָ דָרָשְׁתִּי. לִי קִוּוּ רְשָׁעִים לְאַבְּדֵנִי עֵדֹתֶיךָ אֶתְבּוֹנָן. לְכָל תִּכְלָה רָאִיתִי קֵץ רְחָבָה מִצְוָתְךָ מְאֹד.</item>
        <item>מָה אָהַבְתִּי תוֹרָתֶךָ. כָּל הַיּוֹם הִיא שִׂיחָתִי. מֵאֹיְבַי תְּחַכְּמֵנִי מִצְוֹתֶךָ. כִּי לְעוֹלָם הִיא לִי. מִכָּל מְלַמְּדַי הִשְׂכַּלְתִּי. כִּי עֵדְוֹתֶיךָ שִׂיחָה לִי. מִזְּקֵנִים אֶתְבּוֹנָן. כִּי פִקּוּדֶיךָ נָצָרְתִּי. מִכָּל אֹרַח רָע כָּלִאתִי רַגְלָי לְמַעַן אֶשְׁמֹר דְּבָרֶךָ. מִמִּשְׁפָּטֶיךָ לֹא סָרְתִּי. כִּי אַתָּה הוֹרֵתָנִי. מַה נִּמְלְצוּ לְחִכִּי אִמְרָתֶךָ מִדְּבַשׁ לְפִי. מִפִּקּוּדֶיךָ אֶתְבּוֹנָן עַל כֵּן שָׂנֵאתִי כָּל אֹרַח שָׁקֶר.</item>
        <item>נֵר לְרַגְלִי דְבָרֶךָ וְאוֹר לִנְתִיבָתִי. נִשְׁבַּעְתִּי וָאֲקַיֵּמָה לִשְׁמֹר מִשְׁפְּטֵי צִדְקֶךָ. נַעֲנֵיתִי עַד מְאֹד אֲדֹנָי חַיֵּנִי כִדְבָרֶךָ. נִדְבוֹת פִּי רְצֵה נָא אֲדֹנָי וּמִשְׁפָּטֶיךָ לַמְּדֵנִי. נַפְשִׁי בְכַפִּי תָמִיד וְתוֹרָתְךָ לֹא שָׁכָחְתִּי. נָתְנוּ רְשָׁעִים פַּח לִי וּמִפִּקּוּדֶיךָ לֹא תָעִיתִי. נָחַלְתִּי עֵדְוֹתֶיךָ לְעוֹלָם. כִּי שְׂשׂוֹן לִבִּי הֵמָּה. נָטִיתִי לִבִּי לַעֲשׂוֹת חֻקֶּיךָ לְעוֹלָם עֵקֶב.</item>
        <item>סֵעֲפִים שָׂנֵאתִי וְתוֹרָתְךָ אָהָבְתִּי. סִתְרִי וּמָגִנִּי אָתָּה לִדְבָרְךָ יִחָלְתִּי. סוּרוּ מִמֶּנִּי מְרֵעִים וְאֶצְּרָה מִצְוֹת אֱלֹהָי. סָמְכֵנִי כְאִמְרָתְךָ וְאֶחְיֶה וְאַל תְּבִישֵׁנִי מִשִּׂבְרִי. סְעָדֵנִי וְאִוָּשֵׁעָה וְאֶשְׁעָה בְחֻקֶּיךָ תָמִיד. סָלִיתָ כָּל שׁוֹגִים מֵחֻקֶּיךָ. כִּי שֶׁקֶר תַּרְמִיתָם. סִגִים הִשְׁבַּתָּ כָל רִשְׁעֵי אָרֶץ לָכֵן אָהַבְתִּי עֵדֹתֶיךָ. סָמַר מִפַּחְדְּךָ בְשָׂרִי וּמִמִּשְׁפָּטֶיךָ יָרֵאתִי.</item>
        <item>עָשִׂיתִי מִשְׁפָּט וָצֶדֶק בַּל תַּנִּיחֵנִי לְעֹשְׁקָי. עֲרֹב עַבְדְּךָ לְטוֹב אַל יַעַשְׁקֻנִי זֵדִים. עֵינַי כָּלוּ לִישׁוּעָתֶךָ וּלְאִמְרַת צִדְקֶךָ. עֲשֵׂה עִם עַבְדְּךָ כְחַסְדֶּךָ וְחֻקֶּיךָ לַמְּדֵנִי. עַבְדְּךָ אָנִי הֲבִינֵנִי וְאֵדְעָה עֵדֹתֶיךָ. עֵת לַעֲשׂוֹת לַיהוָה הֵפֵרוּ תּוֹרָתֶךָ. עַל כֵּן אָהַבְתִּי מִצְוֹתֶיךָ מִזָּהָב וּמִפָּז. עַל כֵּן כָּל פִּקּוּדֵי כֹל יִשָּׁרְתִּי כָּל אֹרַח שֶׁקֶר שָׂנֵאתִי.</item>
        <item>פְּלָאוֹת עֵדְוֹתֶיךָ עַל כֵּן נְצָרָתַם נַפְשִׁי. פֵּתַח דְּבָרֶיךָ יָאִיר מֵבִין פְּתָיִים. פִּי פָעַרְתִּי וָאֶשְׁאָפָה. כִּי לְמִצְוֹתֶיךָ יָאָבְתִּי. פְּנֵה אֵלַי וְחָנֵּנִי כְּמִשְׁפָּט לְאֹהֲבֵי שְׁמֶךָ. פְּעָמַי הָכֵן בְּאִמְרָתֶךָ וְאַל תַּשְׁלֶט בִּי כָל אָוֶן. פְּדֵנִי מֵעֹשֶׁק אָדָם וְאֶשְׁמְרָה פִּקּוּדֶיךָ. פָּנֶיךָ הָאֵר בְּעַבְדֶּךָ וְלַמְּדֵנִי אֶת חֻקֶּיךָ. פַּלְגֵי מַיִם יָרְדוּ עֵינָי עַל לֹא שָׁמְרוּ תוֹרָתֶךָ.</item>
        <item>צַדִּיק אַתָּה אֲדֹנָי וְיָשָׁר מִשְׁפָּטֶיךָ. צִוִּיתָ צֶדֶק עֵדֹתֶיךָ וֶאֱמוּנָה מְאֹד. צִמְּתַתְנִי קִנְאָתִי. כִּי שָׁכְחוּ דְבָרֶיךָ צָרָי. צְרוּפָה אִמְרָתְךָ מְאֹד וְעַבְדְּךָ אֲהֵבָהּ. צָעִיר אָנֹכִי וְנִבְזֶה פִּקֻּדֶיךָ לֹא שָׁכָחְתִּי. צִדְקָתְךָ צֶדֶק לְעוֹלָם וְתוֹרָתְךָ אֱמֶת. צַר וּמָצוֹק מְצָאוּנִי מִצְוֹתֶיךָ שַׁעֲשֻׁעָי. צֶדֶק עֵדְוֹתֶיךָ לְעוֹלָם הֲבִינֵנִי וְאֶחְיֶה.</item>
        <item>קָרָאתִי בְכָל לֵב עֲנֵנִי אֲדֹנָי חֻקֶּיךָ אֶצֹּרָה. קְרָאתִיךָ הוֹשִׁיעֵנִי וְאֶשְׁמְרָה עֵדֹתֶיךָ. קִדַּמְתִּי בַנֶּשֶׁף וָאֲשַׁוֵּעָה לִדְבָרְךָ יִחָלְתִּי. קִדְּמוּ עֵינַי אַשְׁמֻרוֹת לָשִׂיחַ בְּאִמְרָתֶךָ. קוֹלִי שִׁמְעָה כְחַסְדֶּךָ אֲדֹנָי כְּמִשְׁפָּטֶךָ חַיֵּנִי. קָרְבוּ רֹדְפֵי זִמָּה מִתּוֹרָתְךָ רָחָקוּ. קָרוֹב אַתָּה אֲדֹנָי וְכָל מִצְוֹתֶיךָ אֱמֶת. קֶדֶם יָדַעְתִּי מֵעֵדֹתֶיךָ. כִּי לְעוֹלָם יְסַדְתָּם.</item>
        <item>רְאֵה עָנְיִי וְחַלְּצֵנִי. כִּי תוֹרָתְךָ לֹא שָׁכָחְתִּי. רִיבָה רִיבִי וּגְאָלֵנִי לְאִמְרָתְךָ חַיֵּנִי. רָחוֹק מֵרְשָׁעִים יְשׁוּעָה. כִּי חֻקֶּיךָ לֹא דָרָשׁוּ. רַחֲמֶיךָ רַבִּים אֲדֹנָי כְּמִשְׁפָּטֶיךָ חַיֵּנִי. רַבִּים רֹדְפַי וְצָרָי מֵעֵדְוֹתֶיךָ לֹא נָטִיתִי. רָאִיתִי בֹגְדִים וָאֶתְקוֹטָטָה אֲשֶׁר אִמְרָתְךָ לֹא שָׁמָרוּ. רְאֵה כִּי פִקּוּדֶיךָ אָהָבְתִּי אֲדֹנָי כְּחַסְדְּךָ חַיֵּנִי. רֹאשׁ דְּבָרְךָ אֱמֶת וּלְעוֹלָם כָּל מִשְׁפַּט צִדְקֶךָ.</item>
        <item>שָׂרִים רְדָפוּנִי חִנָּם וּמִדְּבָרְךָ פָּחַד לִבִּי. שָׂשׂ אָנֹכִי עַל אִמְרָתֶךָ כְּמוֹצֵא שָׁלָל רָב. שֶׁקֶר שָׂנֵאתִי וַאֲתַעֵבָה תּוֹרָתְךָ אָהָבְתִּי. שֶׁבַע בַּיּוֹם הִלַּלְתִּיךָ עַל מִשְׁפְּטֵי צִדְקֶךָ. שָׁלוֹם רָב לְאֹהֲבֵי תוֹרָתֶךָ וְאֵין לָמוֹ מִכְשׁוֹל. שִׂבַּרְתִּי לִישׁוּעָתְךָ אֲדֹנָי וּמִצְוֹתֶיךָ עָשִׂיתִי. שָׁמְרָה נַפְשִׁי עֵדֹתֶיךָ וָאֹהֲבֵם מְאֹד. שָׁמַרְתִּי פִקּוּדֶיךָ וְעֵדֹתֶיךָ. כִּי כָל דְּרָכַי נֶגְדֶּךָ.</item>
        <item>תִּקְרַב רִנָּתִי לְפָנֶיךָ אֲדֹנָי כִּדְבָרְךָ הֲבִינֵנִי. תָּבוֹא תְּחִנָּתִי לְפָנֶיךָ כְּאִמְרָתְךָ הַצִּילֵנִי. תַּבַּעְנָה שְׂפָתַי תְּהִלָּה. כִּי תְלַמְּדֵנִי חֻקֶּיךָ. תַּעַן לְשׁוֹנִי אִמְרָתֶךָ. כִּי כָל מִצְוֹתֶיךָ צֶּדֶק. תְּהִי יָדְךָ לְעָזְרֵנִי. כִּי פִקּוּדֶיךָ בָחָרְתִּי. תָּאַבְתִּי לִישׁוּעָתְךָ אֲדֹנָי וְתוֹרָתְךָ שַׁעֲשֻׁעָי. תְּחִי נַפְשִׁי וּתְהַלְלֶךָּ וּמִשְׁפָּטֶךָ יַעְזְרֻנִי. תָּעִיתִי כְּשֶׂה אֹבֵד בַּקֵּשׁ עַבְדֶּךָ. כִּי מִצְוֹתֶיךָ לֹא שָׁכָחְתִּי.</item>
    </string-array>
    <string-array name="alef_bet">
        <item>א</item>
        <item>ב</item>
        <item>ג</item>
        <item>ד</item>
        <item>ה</item>
        <item>ו</item>
        <item>ז</item>
        <item>ח</item>
        <item>ט</item>
        <item>י</item>
        <item>כך</item>
        <item>ל</item>
        <item>מם</item>
        <item>נן</item>
        <item>ס</item>
        <item>ע</item>
        <item>פף</item>
        <item>צץ</item>
        <item>ק</item>
        <item>ר</item>
        <item>ש</item>
        <item>ת</item>
    </string-array>
    <string name="ok">אישור</string>
    <string name="sonOf">שם האב/אם</string>
    <string name="showGeneric">הראה גירסה אחידה</string>
    <string name="son">בן</string>
    <string name="girl">בת</string>
    <string name="deceseName">שם הנפטר</string>
    <string name="pref_font_list">pref_font_list</string>
    <string name="pref_black_text">black_text</string>
    <string name="pref_is_font_enabled">is_font_enabled</string>
    <string name="pref_list_key">listpref</string>
</resources>